-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
8f170ece9 (dev), bbba877a9 (6.8), d18f6d694 (dev), 65d8be4b9 (6.8)
https://codereview.qt-project.org/c/qt/qtdeclarative/+/563469 has failed to configure on Xcode due to the following error.
The custom command generating
/Users/qt/work/qt/qtdeclarative_standalone_tests/tests/auto/cmake/test_qml_app_deployment/userqmlapp_qmltyperegistrations.cpp
is attached to multiple targets:
UserQmlApp
all_aotstats
but none of these is a common dependency of the other(s). This is not allowed by the Xcode "new build system".
Therefore, aotstats don't currently work on Xcode and support for it has been disabled. This should be fixed
- split from
-
QTBUG-124667 QML Script Compiler should provide insights into what's compiled
-
- Closed
-
For Gerrit Dashboard: QTBUG-125995 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
587342,5 | Fix the aotstats dependency chain for new Xcode generator | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
588089,2 | Fix the aotstats dependency chain for new Xcode generator | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
599618,3 | CMake: Use module target as unique id for module aotstats | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
599890,2 | CMake: Use module target as unique id for module aotstats | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |